Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1266,9 +1266,9 @@ fieldset {
         order: 1;
     }
     #profilediv {
-        width: 25%;
+        width: 35%;
         text-align: left;
-        order: 2;
+        order: 3;
     }
     #profilepic {
         width: 200px;
